# sms-spam

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  comparison.py  embed.py  embedding_classifier.py  hybrid_cascade.py  llm_classifier.py  ml.yml  optimize_embeddings.py  optimize_traditional.py  pyproject.toml  requirements.txt  threshold_optimizer.py  traditional_ml.py  utils.py
.claude/: settings.local.json
.claude/agents/: spam-feature-engineer.md
configs/: default.yaml
graphs/: comparison_report.txt  comparison_summary.csv  embedding_ml_results.csv  embedding_summary.json  hybrid_cascade_results.csv  hybrid_cascade_summary.json  optimal_thresholds.json  traditional_ml_results.csv
scripts/: 01_preprocess.py  02_train_traditional.py  03_train_embeddings.py  04_optimize.py  05_train_hybrid.py  06_evaluate.py
src/sms_spam/classifiers/: base.py  embedding.py  hybrid.py  traditional.py
src/sms_spam/data/: embeddings.py  loader.py  preprocessing.py
src/sms_spam/evaluation/: metrics.py  visualization.py
src/sms_spam/features/: chromadb_storage.py  tfidf.py
src/sms_spam/optimization/: optuna_tuner.py  threshold_tuner.py
src/sms_spam/utils/: constants.py  io.py
